--- a/project.json
+++ b/project.json
@@ -1,19 +1,20 @@
 {
     "version": "1.0.0-*",
     "testRunner": "xunit",
+    "buildOptions": {
+    "emitEntryPoint": true
+  },
     "dependencies": {
         "xunit": "2.1.0",
         "dotnet-test-xunit": "1.0.0-rc2-build10025",
-        "FluentAssertions": "4.9.0"
+        "FluentAssertions": "4.9.0",
+         "Microsoft.NETCore.App": {
+            "type": "platform",
+            "version": "1.0.0-rc2-3002702"
+            }
     },
     "frameworks": {
         "netcoreapp1.0": {
-            "dependencies": {
-                "Microsoft.NETCore.App": {
-                    "type": "platform",
-                    "version": "1.0.0-rc2-3002702"
-                }
-            },
             "imports": [
                 "dnxcore50",
                 "portable-net45+win8"
