--- a/project.lock.json
+++ b/project.lock.json
@@ -7404,12 +7404,11 @@
   "projectFileDependencyGroups": {
     "": [
       "FluentAssertions >= 4.9.0",
+      "Microsoft.NETCore.App >= 1.0.0-rc2-3002702",
       "dotnet-test-xunit >= 1.0.0-rc2-build10025",
       "xunit >= 2.1.0"
     ],
-    ".NETCoreApp,Version=v1.0": [
-      "Microsoft.NETCore.App >= 1.0.0-rc2-3002702"
-    ]
+    ".NETCoreApp,Version=v1.0": []
   },
   "tools": {},
   "projectFileToolGroups": {}
