--- a/project.json
+++ b/project.json
@@ -5,18 +5,17 @@
     "emitEntryPoint": true
   },
     "dependencies": {
-        "xunit": "2.1.0",
-        "dotnet-test-xunit": "1.0.0-rc2-build10025",
+        "xunit": "2.2.0-beta2-build3300",
+        "dotnet-test-xunit": "2.2.0-preview2-build1029",
         "FluentAssertions": "4.9.0",
          "Microsoft.NETCore.App": {
             "type": "platform",
-            "version": "1.0.0-rc2-3002702"
-            }
+            "version": "1.0.0"
+         } 
     },
     "frameworks": {
         "netcoreapp1.0": {
             "imports": [
-                "dnxcore50",
                 "portable-net45+win8"
             ]
         }
